plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'idea'
}

group = 'JOO.jooshop'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

def querydslVersion = "5.0.0"

dependencies {
    // === Spring Boot Starter ===
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // === Common Utils ===
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'org.modelmapper:modelmapper:2.4.1'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'

    // === JWT ===
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.76'

    // === Hibernate / JPA ===
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.16.1'
    implementation 'org.hibernate:hibernate-core:6.4.4.Final'

    // === Thymeleaf Security Extras ===
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // === Email ===
    implementation 'org.springframework:spring-context:6.1.5'
    implementation 'org.springframework:spring-context-support:6.1.5'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    // === Lombok ===
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // === DB Driver ===
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'

    // === Validation ===
    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
    implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'

    // === QueryDSL (Jakarta) ===
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"

    // === Spring Core Nullable ===
    implementation 'org.springframework:spring-core:6.1.5'

    // === Test ===
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation('org.junit.vintage:junit-vintage-engine') {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }

    // === DevTools ===
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}


// =====================
// QueryDSL 설정
// =====================
def querydslDir = "$buildDir/generated/querydsl"

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory = file(querydslDir)
}

sourceSets {
    main.java.srcDirs += [querydslDir]
}

idea {
    module {
        generatedSourceDirs += file(querydslDir)
    }
}

clean {
    delete file(querydslDir)
}


// =====================
// Compile 옵션
// =====================
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

test {
    useJUnitPlatform()
    jvmArgs '-Xshare:off'
}

tasks.named('bootJar') {
    archiveFileName = "jooshop.jar"
}
